--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,3 @@
 PORT=8080
-DATABASE_URL=postgres://dev:dev@localhost/changeMe
-TOKEN_SECRET=changeMe
+DATABASE_URL=postgres://dev:dev@localhost/vgdb
+TOKEN_SECRET= wh474m1d01ng
