--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "deploy": "git push --force origin main:pub"
   },
   "dependencies": {
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "husky": "^8.0.3",
     "npm-run-all": "^4.1.5",
     "react-icons": "^5.0.1",
@@ -34,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
     "autoprefixer": "^10.4.17",
+    "daisyui": "^4.6.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard": "^17.0.0",
