--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "autoprefixer": "^10.4.17"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
