--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-icons": "^5.0.1",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "autoprefixer": "^10.4.17",
+    "postcss": "^8.4.33"
   },
   "devDependencies": {
     "@learningfuze/lfz-config": "^1.0.0",
