--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,7 @@
     "@vitejs/plugin-react": "^4.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
-    "vite": "^4.4.5",
-    "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.17"
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -29,6 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.33",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.12"
   }
 }
