--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "vite": "^4.4.5",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
-    "autoprefixer": "^10.4.17"
+    "autoprefixer": "^10.4.17",
+    "daisyui": "^4.6.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
