--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
     "husky": "^8.0.3",
+    "node-fetch": "^3.3.2",
     "npm-run-all": "^4.1.5",
     "react-icons": "^5.0.1",
     "ts-node": "^10.9.1",
